# gke-sre-ai-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-gke-triage.md
docs/superpowers/specs/: 2026-06-23-gke-triage-design.md
eval/: run_eval.py
eval/scenarios/configmap_key_mismatch/: broken.yaml  expected_fix.yaml
eval/scenarios/image_tag_typo/: broken.yaml  expected_fix.yaml
src/gke_scout/: cli.py  config.py  engines.py  models.py  orchestrator.py  reporter.py
src/gke_scout/guardrail/: audit.py  policy.py  proxy.py  server.py
src/gke_scout/skills/k8s-troubleshooter/: SKILL.md
src/gke_triage/: cli.py  config.py  engines.py  models.py  orchestrator.py  reporter.py
src/gke_triage/context/: sources.py
src/gke_triage/guardrail/: audit.py  policy.py  proxy.py  redact.py  server.py
src/gke_triage/skills/k8s-troubleshooter/: SKILL.md
tests/: test_antigravity_runner.py  test_cli.py  test_config.py  test_context_sources.py  test_engines.py  test_eval_scenarios.py  test_gemini_runner.py  test_guardrail_audit.py  test_guardrail_policy.py  test_guardrail_proxy.py  test_guardrail_redact.py  test_guardrail_server.py  test_models.py  test_orchestrator.py  test_readme.py  test_reporter.py  test_skill_present.py  test_smoke.py
