[project]
name = "gke-triage"
version = "0.1.0"
description = "Local AI on-call SRE for GKE: read-only triage, evidence-cited reports, GitOps fix PRs."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "mcp>=1.2",
    "pyyaml>=6.0",
]

[project.scripts]
gke-triage = "gke_triage.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gke_triage"]
