[project]
name = "gke-scout"
version = "0.1.0"
description = "Local AI on-call SRE for GKE: read-only diagnostics with evidence-cited root-cause reports."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "google-auth>=2.20",
    "requests>=2.28",
]

[project.scripts]
gke-scout = "gke_scout.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gke_scout"]
